# Rocket

./: .gitattributes  .gitignore  3D_MESH_ENGINE_SPEC.md  BALLISTICS_PHYSICS_CORE.md  CMakeLists.txt  CONTRIBUTING.md  GUI_UX_SPECIFICATION.md  MATERIALS_DATABASE.md  MODELING_GUIDE.md  PROGRESS_DB.md  README.md  RLAB_FORMAT.md  SKILLS_STRUCTURE.md  THEORETICAL_PHYSICS.md  TODO_BACKLOG.md  sttuttra.md
.github/workflows/: build.yml
include/rocket/: Aerodynamics.hpp  CfdModule.hpp  Concepts.hpp  DebugTelemetry.hpp  DesignLibrary.hpp  Environment.hpp  FlightState.hpp  Forces.hpp  MathTypes.hpp  MeshGenerator.hpp  NativeFileDialog.hpp  PhysicalConstants.hpp  ProjectIO.hpp  Propulsion.hpp  RocketApp.hpp  RungeKutta4.hpp  SecureValidation.hpp  SimulationCaches.hpp  SimulationCore.hpp  SimulationEngine.hpp  SimulationMonitor.hpp  SimulationRuntime.hpp  Units.hpp  Validation.hpp  VehicleModel.hpp  WeatherProvider.hpp
src/: Aerodynamics.cpp  CfdModule.cpp  DebugTelemetry.cpp  DesignLibrary.cpp  Environment.cpp  Forces.cpp  MeshGenerator.cpp  NativeFileDialog.cpp  ProjectIO.cpp  RocketApp.cpp  RocketSlintApp.cpp  RungeKutta4.cpp  SimulationCaches.cpp  SimulationCore.cpp  SimulationEngine.cpp  SimulationMonitor.cpp  Validation.cpp  WeatherProvider.cpp  main.cpp
src/app/: RocketAppAeroHelpers.cpp  RocketAppAeroHelpers.hpp  RocketAppHistory.cpp  RocketAppHistory.hpp  RocketAppImGui.inl  RocketAppImGuiHelpers.cpp  RocketAppImGuiHelpers.hpp  RocketAppInteraction.inl  RocketAppState.inl  RocketAppTrajectory.cpp  RocketAppTrajectory.hpp  RocketAppUiCommon.inl  RocketAppUiModeling.inl  RocketAppUiSimulation.inl  RocketAppUiTrajectory.inl  RocketAppUiWindTunnel.inl
tests/: rocket_core_tests.cpp
ui/: rocket_lab.slint
